--- a/style/base.css
+++ b/style/base.css
@@ -3,8 +3,8 @@ body {
 	margin:auto;
 	/*max-width:850px;*/
   max-width:750px;
-	/*font-family: Helvetica;*/
-  font-family: 'Lora', serif;
+	font-family: Helvetica;
+  /*font-family: 'Lora', serif;*/
 	font-weight:100;
 	margin-bottom: 50px;
 	padding-left: 10px;
@@ -14,8 +14,8 @@ body {
 h1 {
 	font-weight:600;
 	font-size:35px;
-	/*font-family: 'Montserrat', sans-serif;*/
-  font-family: 'Lora', serif;
+	font-family: 'Montserrat', sans-serif;
+  /*font-family: 'Lora', serif;*/
   color: #6534ff;
 }
 
@@ -23,8 +23,8 @@ h2{
 	font-size: 20px;
 	font-weight:800;
 	margin-top:20px;
-	/*font-family: 'Montserrat', sans-serif;*/
-  font-family: 'Lora', serif;
+	font-family: 'Montserrat', sans-serif;
+  /*font-family: 'Lora', serif;*/
 	padding-bottom: 3px;
   color: #6534ff;
 
@@ -33,8 +33,8 @@ h3{
 	font-size: 20px;
 	font-weight:800;
 	margin-bottom: 5px;
-	/*font-family: 'Montserrat', sans-serif;*/
-  font-family: 'Lora', serif;
+	font-family: 'Montserrat', sans-serif;
+  /*font-family: 'Lora', serif;*/
 	margin-top: 0;
 	color: #000000 !important;
 }
@@ -113,8 +113,7 @@ img.book {
 
 footer p {
   margin: 0px;
-	/*font-family: 'Montserrat', sans-serif;*/
-  font-family: 'Lora', serif;
+	font-family: 'Montserrat', sans-serif;
   font-size: 15px;
 	color: black;
 	margin-top: 20px;
