--- a/style/base.css
+++ b/style/base.css
@@ -75,6 +75,7 @@ nav ul li a {
     text-decoration: none;
     margin-right: 1em;
     color: #000000 !important;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
