--- a/style/base.css
+++ b/style/base.css
@@ -3,43 +3,46 @@ body {
 	margin:auto;
 	/*max-width:850px;*/
   max-width:750px;
-	font-family: Helvetica;
+	/*font-family: Helvetica;*/
+  font-family: 'Inconsolata', monospace;
   /*font-family: 'Lora', serif;*/
 	font-weight:100;
 	margin-bottom: 50px;
+  font-size: 14px;
 	padding-left: 10px;
 	padding-right: 10px;
 }
 
 h1 {
 	font-weight:600;
-	font-size:35px;
-	font-family: 'Montserrat', sans-serif;
+	font-size:20px;
+	/*font-family: 'Montserrat', sans-serif;*/
+  font-family: 'Inconsolata', monospace;
   /*font-family: 'Lora', serif;*/
-  color: #6534ff;
 }
 
 h2{
-	font-size: 20px;
+	font-size: 14px;
 	font-weight:800;
 	margin-top:20px;
-	font-family: 'Montserrat', sans-serif;
+	/*font-family: 'Montserrat', sans-serif;*/
+  font-family: 'Inconsolata', monospace;
   /*font-family: 'Lora', serif;*/
 	padding-bottom: 3px;
-  color: #6534ff;
 
 }
 h3{
-	font-size: 20px;
+	font-size: 14px;
 	font-weight:800;
 	margin-bottom: 5px;
-	font-family: 'Montserrat', sans-serif;
+	/*font-family: 'Montserrat', sans-serif;*/
+  font-family: 'Inconsolata', monospace;
   /*font-family: 'Lora', serif;*/
 	margin-top: 0;
-	color: #000000 !important;
+	color: #000001 !important;
 }
 p {
-	font-size: 15px;
+	font-size: 14px;
 	line-height: 19px;
 	font-weight:100;
 	margin:0;
@@ -51,7 +54,7 @@ a:link, a:visited{
 }
 
 p.description a:link{
-  color: #6534ff;
+  text-decoration: underline;
 }
 
 .pub {
@@ -63,19 +66,23 @@ p.description a:link{
 }
 
 a:hover {
-	text-decoration: underline;
+	/*text-decoration: underline;*/
+  background-color: #FFFF00;
+  /*background-color: yellow;*/
 }
 
 #work-row a {
-	  color: #6534ff !important;
+	  text-decoration: underline;
 }
 nav ul li a {
     text-align: bottom;
     font-weight: 700;
+    font-size: 14px;
     text-decoration: none;
     margin-right: 1em;
     color: #000000 !important;
-    font-family: 'Montserrat', sans-serif;
+    /*font-family: 'Montserrat', sans-serif;*/
+    font-family: 'Inconsolata', monospace;
 
 }
 
@@ -114,8 +121,9 @@ img.book {
 
 footer p {
   margin: 0px;
-	font-family: 'Montserrat', sans-serif;
-  font-size: 15px;
+	/*font-family: 'Montserrat', sans-serif;*/
+  font-family: 'Inconsolata', monospace;
+  font-size: 12px;
 	color: black;
 	margin-top: 20px;
 }
