--- a/style/base.css
+++ b/style/base.css
@@ -32,7 +32,7 @@ h2{
 
 }
 h3{
-	font-size: 14px;
+	font-size: 16px;
 	font-weight:800;
 	margin-bottom: 5px;
 	/*font-family: 'Montserrat', sans-serif;*/
@@ -51,10 +51,7 @@ p {
 a:link, a:visited{
 	color: #000000;
 	text-decoration: none;
-}
-
-p.description a:link{
-  text-decoration: underline;
+  background-color: rgba(255,242,51,.29804)
 }
 
 .pub {
@@ -65,15 +62,6 @@ p.description a:link{
 	padding-top: 2px;
 }
 
-a:hover {
-	/*text-decoration: underline;*/
-  background-color: rgba(255,242,51,.29804);
-  /*background-color: yellow;*/
-}
-
-#work-row a {
-	  text-decoration: underline;
-}
 nav ul li a {
     text-align: bottom;
     font-weight: 700;
@@ -83,6 +71,7 @@ nav ul li a {
     color: #000000 !important;
     /*font-family: 'Montserrat', sans-serif;*/
     font-family: 'Inconsolata', monospace;
+    background-color: #FFFFFF !important;
 
 }
 
