--- a/style/base.css
+++ b/style/base.css
@@ -54,6 +54,10 @@ a:link, a:visited{
   background-color: rgba(255,242,51,.29804)
 }
 
+li a {
+  background-color: #FFFFFF !important;
+}
+
 .pub {
 	text-transform: uppercase;
 	font-size: 12px;
