--- a/style/base.css
+++ b/style/base.css
@@ -54,6 +54,11 @@ a:link, a:visited{
   background-color: rgba(255,242,51,.29804)
 }
 
+a:hover{
+  text-decoration: underline;
+
+}
+
 li a {
   background-color: #FFFFFF !important;
 }
