--- a/style/base.css
+++ b/style/base.css
@@ -1,33 +1,33 @@
 body {
 	margin-top: 30px;
 	margin:auto;
-	/*max-width:850px;*/
   max-width:750px;
-	/*font-family: Helvetica;*/
   font-family: 'Inconsolata', monospace;
-  /*font-family: 'Lora', serif;*/
 	font-weight:100;
 	margin-bottom: 50px;
   font-size: 14px;
 	padding-left: 10px;
 	padding-right: 10px;
+  background-color: #f7f7f7;
+  color: #4d4d4d;
+
 }
 
+p.description {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 h1 {
 	font-weight:600;
-	font-size:20px;
-	/*font-family: 'Montserrat', sans-serif;*/
+	font-size:30px;
   font-family: 'Inconsolata', monospace;
-  /*font-family: 'Lora', serif;*/
 }
 
 h2{
-	font-size: 14px;
+	font-size: 18px;
 	font-weight:800;
 	margin-top:20px;
-	/*font-family: 'Montserrat', sans-serif;*/
   font-family: 'Inconsolata', monospace;
-  /*font-family: 'Lora', serif;*/
 	padding-bottom: 3px;
 
 }
@@ -35,11 +35,9 @@ h3{
 	font-size: 16px;
 	font-weight:800;
 	margin-bottom: 5px;
-	/*font-family: 'Montserrat', sans-serif;*/
   font-family: 'Inconsolata', monospace;
-  /*font-family: 'Lora', serif;*/
 	margin-top: 0;
-	color: #000001 !important;
+	color: #4d4d4d !important;
 }
 p {
 	font-size: 14px;
@@ -49,7 +47,7 @@ p {
 }
 
 a:link, a:visited{
-	color: #000000;
+	color: #4d4d4d;
 	text-decoration: none;
   background-color: rgba(255,242,51,.29804)
 }
@@ -60,7 +58,7 @@ a:hover{
 }
 
 li a {
-  background-color: #FFFFFF !important;
+  background-color: #f7f7f7 !important;
 }
 
 .pub {
@@ -77,10 +75,10 @@ nav ul li a {
     font-size: 14px;
     text-decoration: none;
     margin-right: 1em;
-    color: #000000 !important;
+    color: #4d4d4d !important;
     /*font-family: 'Montserrat', sans-serif;*/
     font-family: 'Inconsolata', monospace;
-    background-color: #FFFFFF !important;
+    background-color: #f7f7f7 !important;
 
 }
 
