--- a/style/base.css
+++ b/style/base.css
@@ -2,7 +2,7 @@ body {
 max-width:750px;
 font-family:Inconsolata, monospace;
 font-weight:100;
-font-size:16px;
+font-size:14px;
 padding-left:10px;
 padding-right:10px;
 background-color:#f7f7f7;
@@ -13,14 +13,14 @@ margin:auto auto 50px;
 p.description {
 padding-top:10px;
 padding-bottom:10px;
-font-size: 16px;
+font-size: 14px;
 font-weight: 100;
-color:#4d4d4d!important;
+color:#4d4d4d!important;p
 }
 
 h1 {
 font-weight:600;
-font-size:40px;
+font-size:30px;
 font-family:Inconsolata, monospace;
 }
 
@@ -33,7 +33,7 @@ padding-bottom:3px;
 }
 
 h3 {
-font-size:20px;
+font-size:18px;
 font-weight:500;
 margin-bottom:5px;
 font-family:Inconsolata, monospace;
@@ -42,7 +42,7 @@ color:#4d4d4d!important;
 }
 
 p {
-font-size:16px;
+font-size:14px;
 line-height:19px;
 font-weight:100;
 margin:0;
@@ -73,7 +73,7 @@ padding-top:2px;
 nav ul li a {
 text-align:bottom;
 font-weight:100;
-font-size:16px;
+font-size:14px;
 text-decoration:none;
 margin-right:1em;
 color:#4d4d4d!important;
